nginx-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
#    - host: test.com
#      http:
#        paths:
#        - backend:
#            serviceName: gateway
#            servicePort: 8080
    - http:
        paths:
        - path: /employee
          backend:
            serviceName: employee
            servicePort: 8080
        - path: /department
          backend:
            serviceName: department
            servicePort: 8080
        - path: /organization
          backend:
            serviceName: organization
            servicePort: 8080
